# lode

./: Cargo.toml  Dockerfile  README.md  README.zh-CN.md
.github/workflows/: docker.yml
docs/: architecture.md  architecture.zh-CN.md  integration.md  integration.zh-CN.md  lode.example.toml  manifest.example.json  source-adapters.md  source-adapters.zh-CN.md
docs/recipes/: README.md  bun.lode.toml  deno.lode.toml  node.lode.toml
examples/: README.md
examples/bun/: app.ts  lode.toml  package.ts
examples/go/: go.mod  lode.toml  main.go
examples/rust/: Cargo.toml  lode.toml
examples/rust/src/: main.rs
src/: cli.rs  config.rs  error.rs  install.rs  manifest.rs  supervisor.rs
src/commands/: update.rs
tests/apps/web-bun/: README.md
tests/apps/web-rust/: README.md
