[package]
name = "lode-demo-rust"
version = "0.0.0"          # baked into the binary via CARGO_PKG_VERSION (bump per release)
edition = "2021"
publish = false
description = "lode demo app (Rust) — conforms to the lode app contract."

[[bin]]
name = "lode-demo-rust"
path = "src/main.rs"

# Own workspace, so this demo is NOT pulled into lode's root workspace/gate.
[workspace]

# A demo APP may use ordinary libraries — lode does not constrain your app's
# dependencies (lode itself is the one that stays minimal). These are all pure
# Rust and build into a static musl binary. (See ../../tests/apps/web-rust for a
# zero-dependency, std-only variant.)
[dependencies]
tiny_http = "0.12"
serde_json = "1"
signal-hook = "0.3"

[profile.release]
opt-level = "z"
lto = true
strip = true
